# Algorand-CPlusPlus-SDK

./: .gitignore  CMakeLists.txt  Makefile  README.md
documentation/: porting.md
examples/unix/: CMakeLists.txt  main.c  main.cpp
examples/unix/config/: public_b32.txt
examples/unix/vertices_ports/: http_curl.cpp
include/: vertices.h
src/: CMakeLists.txt  account.c  main.cpp  main.h  sha512_256.c  vertices.c  vertices_errors.c
src/algorand/: algorand_parser.c  algorand_provider.c  algorand_transaction.c
src/include/: compilers.h  transaction.h
src/include/utils/: base32.h  base64.h  http_weak.h  sha512_256.h
src/utils/: base32.c  base64.c  http_weak.c  sha512_256.c
tests/: CMakeLists.txt  GenerateTest.cmake  Makefile  MakefileWorker.mk  MakefileWorkerOverrides.mk  README.md
tests/fakes/: fake_vertices_errors.c
tests/src/: test_base32.cpp  test_base64.cpp  test_basicTX.cpp  test_sha512_256.cpp
tests/src/Account/: CMakeLists.txt  test_account.cpp
tests/src/Base32/: CMakeLists.txt  test_base32.cpp
tests/src/Base64/: CMakeLists.txt  test_base64.cpp
tests/src/BasicTX/: CMakeLists.txt  test_basicTX.cpp
tests/src/Sha512_256/: CMakeLists.txt  test_sha512_256.cpp
utils/: install.cmake
